--- a/main.html
+++ b/main.html
@@ -42,10 +42,8 @@
     </style>
   </head>
   <body>
-    <!-- Matrix Canvas -->
     <canvas id="canvas"></canvas>
 
-    <!-- Content -->
     <div class="content-wrapper">
       <!-- Header -->
       <div
@@ -60,7 +58,9 @@
       </div>
 
       <!-- Socials -->
-      <div class="flex flex-wrap justify-center gap-4 my-8">
+      <div
+        class="flex flex-wrap justify-center gap-4 my-8 bg-black/70 p-4 rounded-xl max-w-3xl mx-auto"
+      >
         <a href="https://github.com/username" target="_blank">
           <img
             src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
@@ -79,149 +79,165 @@
       </div>
 
       <!-- Toolkit Section -->
-      <div class="my-12 text-center">
-        <h2 class="text-3xl font-bold mb-6">💼 My Toolkit</h2>
+      <div class="my-12 px-4">
+        <div
+          class="bg-black/70 rounded-2xl shadow-lg p-6 max-w-6xl mx-auto text-center"
+        >
+          <h2 class="text-3xl font-bold mb-6">💼 My Toolkit</h2>
 
-        <h3 class="text-2xl font-semibold mb-2">🌎 Languages</h3>
-        <div class="flex flex-wrap justify-center gap-3 mb-6">
-          <img
-            src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"
-          />
-          <img
-            src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
-          />
-          <img
-            src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"
-          />
-          <img
-            src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"
-          />
-          <img
-            src="https://img.shields.io/badge/OCaml-EC6813?style=for-the-badge&logo=ocaml&logoColor=white"
-          />
-          <img
-            src="https://img.shields.io/badge/Assembly-8E0E00?style=for-the-badge&logo=assemblyscript&logoColor=white"
-          />
-        </div>
+          <h3 class="text-2xl font-semibold mb-2">🌎 Languages</h3>
+          <div class="flex flex-wrap justify-center gap-3 mb-6">
+            <img
+              src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/OCaml-EC6813?style=for-the-badge&logo=ocaml&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Assembly-8E0E00?style=for-the-badge&logo=assemblyscript&logoColor=white"
+            />
+          </div>
 
-        <h3 class="text-2xl font-semibold mb-2">🖥️ Operating Systems</h3>
-        <div class="flex flex-wrap justify-center gap-3 mb-6">
-          <img
-            src="https://img.shields.io/badge/mac%20os-000000?style=for-the-badge&logo=apple&logoColor=white"
-          />
-          <img
-            src="https://img.shields.io/badge/Windows-0078D6?style=for-the-badge&logo=windows&logoColor=white"
-          />
-          <img
-            src="https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black"
-          />
-          <img
-            src="https://img.shields.io/badge/Kali_Linux-557C94?style=for-the-badge&logo=kali-linux&logoColor=white"
-          />
-        </div>
+          <h3 class="text-2xl font-semibold mb-2">🖥️ Operating Systems</h3>
+          <div class="flex flex-wrap justify-center gap-3 mb-6">
+            <img
+              src="https://img.shields.io/badge/mac%20os-000000?style=for-the-badge&logo=apple&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Windows-0078D6?style=for-the-badge&logo=windows&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black"
+            />
+            <img
+              src="https://img.shields.io/badge/Kali_Linux-557C94?style=for-the-badge&logo=kali-linux&logoColor=white"
+            />
+          </div>
 
-        <h3 class="text-2xl font-semibold mb-2">🛡️ Cybersecurity Tools</h3>
-        <div class="flex flex-wrap justify-center gap-3 mb-6">
-          <img
-            src="https://img.shields.io/badge/Nmap-FF6600?style=for-the-badge&logo=Nmap&logoColor=white"
-          />
-          <img
-            src="https://img.shields.io/badge/Wireshark-1679A7?style=for-the-badge&logo=wireshark&logoColor=white"
-          />
-          <img
-            src="https://img.shields.io/badge/Metasploit-EA2C59?style=for-the-badge"
-          />
-          <img
-            src="https://img.shields.io/badge/VMware-607078?style=for-the-badge&logo=vmware&logoColor=white"
-          />
-        </div>
+          <h3 class="text-2xl font-semibold mb-2">🛡️ Cybersecurity Tools</h3>
+          <div class="flex flex-wrap justify-center gap-3 mb-6">
+            <img
+              src="https://img.shields.io/badge/Nmap-FF6600?style=for-the-badge&logo=Nmap&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Wireshark-1679A7?style=for-the-badge&logo=wireshark&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Metasploit-EA2C59?style=for-the-badge"
+            />
+            <img
+              src="https://img.shields.io/badge/VMware-607078?style=for-the-badge&logo=vmware&logoColor=white"
+            />
+          </div>
 
-        <h3 class="text-2xl font-semibold mb-2">🛠️ Development Tools</h3>
-        <div class="flex flex-wrap justify-center gap-3">
-          <img
-            src="https://img.shields.io/badge/VSCode-007ACC?style=for-the-badge&logo=visual-studio-code&logoColor=white"
-          />
-          <img
-            src="https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white"
-          />
-          <img
-            src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white"
-          />
+          <h3 class="text-2xl font-semibold mb-2">🛠️ Development Tools</h3>
+          <div class="flex flex-wrap justify-center gap-3">
+            <img
+              src="https://img.shields.io/badge/VSCode-007ACC?style=for-the-badge&logo=visual-studio-code&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white"
+            />
+          </div>
         </div>
       </div>
 
       <!-- Featured Projects -->
-      <div class="my-12 text-center">
-        <h2 class="text-3xl font-bold mb-6">🚀 Featured Projects</h2>
-        <div class="flex flex-wrap justify-center gap-4">
-          <a href="https://github.com/DanielSon721/Why-I-Love-Cybersecurity">
-            <img
-              src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Why-I-Love-Cybersecurity&theme=tokyonight"
-            />
-          </a>
-          <a href="https://github.com/DanielSon721/OCaml-Interpreter">
-            <img
-              src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=OCaml-Interpreter&theme=tokyonight"
-            />
-          </a>
-          <a href="https://github.com/DanielSon721/Auto-Messenger">
-            <img
-              src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Auto-Messenger&theme=tokyonight"
-            />
-          </a>
-          <a href="https://github.com/DanielSon721/Hacking-Tools">
-            <img
-              src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Hacking-Tools&theme=tokyonight"
-            />
-          </a>
-          <a href="https://github.com/DanielSon721/Unix-Shell">
-            <img
-              src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Unix-Shell&theme=tokyonight"
-            />
-          </a>
-          <a href="https://github.com/DanielSon721/Texas-Hold-em-Poker">
-            <img
-              src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Texas-Hold-em-Poker&theme=tokyonight"
-            />
-          </a>
+      <div class="my-12 px-4">
+        <div
+          class="bg-black/70 rounded-2xl shadow-lg p-6 max-w-6xl mx-auto text-center"
+        >
+          <h2 class="text-3xl font-bold mb-6">🚀 Featured Projects</h2>
+          <div class="flex flex-wrap justify-center gap-4">
+            <a href="https://github.com/DanielSon721/Why-I-Love-Cybersecurity">
+              <img
+                src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Why-I-Love-Cybersecurity&theme=tokyonight"
+              />
+            </a>
+            <a href="https://github.com/DanielSon721/OCaml-Interpreter">
+              <img
+                src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=OCaml-Interpreter&theme=tokyonight"
+              />
+            </a>
+            <a href="https://github.com/DanielSon721/Auto-Messenger">
+              <img
+                src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Auto-Messenger&theme=tokyonight"
+              />
+            </a>
+            <a href="https://github.com/DanielSon721/Hacking-Tools">
+              <img
+                src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Hacking-Tools&theme=tokyonight"
+              />
+            </a>
+            <a href="https://github.com/DanielSon721/Unix-Shell">
+              <img
+                src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Unix-Shell&theme=tokyonight"
+              />
+            </a>
+            <a href="https://github.com/DanielSon721/Texas-Hold-em-Poker">
+              <img
+                src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Texas-Hold-em-Poker&theme=tokyonight"
+              />
+            </a>
+          </div>
         </div>
       </div>
 
       <!-- Certifications -->
-      <div class="my-12 text-center">
-        <h2 class="text-3xl font-bold mb-6">📜 Certifications</h2>
-        <div class="flex flex-wrap justify-center gap-4">
-          <a
-            href="https://www.credly.com/badges/6bc1b1ee-c569-4b9a-9c18-75e2a44e1c8c/public_url"
-            target="_blank"
-          >
-            <img
-              src="https://img.shields.io/badge/Google_Cybersecurity-4285F4?style=for-the-badge&logo=google&logoColor=white"
-            />
-          </a>
-          <a
-            href="https://www.credly.com/badges/44600edd-a72d-4115-bc9d-9077239cdb00/public_url"
-            target="_blank"
-          >
-            <img
-              src="https://img.shields.io/badge/CompTIA_Security+-D50000?style=for-the-badge&logo=comptia&logoColor=white"
-            />
-          </a>
+      <div class="my-12 px-4">
+        <div
+          class="bg-black/70 rounded-2xl shadow-lg p-6 max-w-4xl mx-auto text-center"
+        >
+          <h2 class="text-3xl font-bold mb-6">📜 Certifications</h2>
+          <div class="flex flex-wrap justify-center gap-4">
+            <a
+              href="https://www.credly.com/badges/6bc1b1ee-c569-4b9a-9c18-75e2a44e1c8c/public_url"
+              target="_blank"
+            >
+              <img
+                src="https://img.shields.io/badge/Google_Cybersecurity-4285F4?style=for-the-badge&logo=google&logoColor=white"
+              />
+            </a>
+            <a
+              href="https://www.credly.com/badges/44600edd-a72d-4115-bc9d-9077239cdb00/public_url"
+              target="_blank"
+            >
+              <img
+                src="https://img.shields.io/badge/CompTIA_Security+-D50000?style=for-the-badge&logo=comptia&logoColor=white"
+              />
+            </a>
+          </div>
         </div>
       </div>
 
       <!-- GitHub Analytics -->
-      <div class="my-12 text-center">
-        <h2 class="text-3xl font-bold mb-6">📊 GitHub Analytics</h2>
-        <div class="flex flex-wrap justify-center gap-6">
-          <img
-            height="165"
-            src="https://github-readme-stats.vercel.app/api?username=danielson721&show_icons=true&theme=tokyonight&include_all_commits=true"
-          />
-          <img
-            height="165"
-            src="https://github-readme-stats.vercel.app/api/top-langs/?username=danielson721&layout=compact&theme=tokyonight"
-          />
+      <div class="my-12 px-4">
+        <div
+          class="bg-black/70 rounded-2xl shadow-lg p-6 max-w-5xl mx-auto text-center"
+        >
+          <h2 class="text-3xl font-bold mb-6">📊 GitHub Analytics</h2>
+          <div class="flex flex-wrap justify-center gap-6">
+            <img
+              height="165"
+              src="https://github-readme-stats.vercel.app/api?username=danielson721&show_icons=true&theme=tokyonight&include_all_commits=true"
+            />
+            <img
+              height="165"
+              src="https://github-readme-stats.vercel.app/api/top-langs/?username=danielson721&layout=compact&theme=tokyonight"
+            />
+          </div>
         </div>
       </div>
     </div>
@@ -235,7 +251,7 @@
       canvas.height = window.innerHeight;
 
       let letters =
-        "アァイィウヴエエオカガキギクグケゲコゴサザシジスズセゼソゾタダチッヂヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモヤユヨラリルレロワヲンABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789".split(
+        "ㄱㄴㄷㄹㅁㅂㅅㅇㅈㅊㅋㅌㅍㅎㅏㅑㅓㅕㅗㅛㅜㅠㅡㅣABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789αβθλμΞπΣφψΩ".split(
           ""
         );
       let fontSize = 14;
