--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         <h1 class="matrix-text">Daniel Son</h1>
         <div class="mt-4 typing-shadow">
           <img
-            src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=24&pause=1500&color=FFFFFF&center=true&vCenter=true&width=500&lines=University+of+Maryland;Cybersecurity+Enthusiast;Software+Engineer;Computer+Science+and+Mathematics;CompTIA+Security%2B"
+            src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=24&pause=1500&color=FFFFFF&center=true&vCenter=true&width=500&
+            lines=
+            University+of+Maryland;
+            Cybersecurity+Enthusiast;
+            Software+Engineer;
+            Computer+Science+and+Mathematics;
+            ΣΦΔ;"
             alt="Typing Animation"
           />
         </div>
@@ -39,7 +45,7 @@
               />
             </a>
             <a
-              href="https://linkedin.com/in/username"
+              href="https://linkedin.com/in/daniel-son-720950260/"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -47,13 +53,10 @@
                 src="https://img.shields.io/badge/LinkedIn-0A66C2?style=for-the-badge&logo=linkedin&logoColor=white"
               />
             </a>
-            <a
-              href="mailto:example@example.com"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
+            <a href="#" onclick="copyEmail(event)">
               <img
                 src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&logo=gmail&logoColor=white"
+                alt="Email"
               />
             </a>
           </div>
@@ -142,7 +145,7 @@
                       >GitHub</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Git</span
+                      >JUnit</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >gdb</span
@@ -150,11 +153,20 @@
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >UTop</span
                     >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >pandas</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >NumPy</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >scikit-learn</span
+                    >
                   </div>
                 </div>
               </div>
 
-              <!-- Certifications moved here -->
+              <!-- Certifications-->
               <div class="mt-8">
                 <h2 class="text-3xl font-bold mb-6">📜 Certifications</h2>
                 <div class="flex flex-col gap-4">
@@ -178,6 +190,28 @@
                       src="https://img.shields.io/badge/CompTIA_Security+-D50000?style=for-the-badge&logo=comptia&logoColor=white"
                     />
                   </a>
+                  <a
+                    href="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/work-in-progress-design-template-6cc0b86afbb81d0528f26113e3ec02cf_screen.jpg?ts=1698307882"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="flex items-center hover:scale-105 transition-transform"
+                  >
+                    <!-- Logo container styled to match badge height -->
+                    <div class="bg-[#FF9900] h-[28px] flex items-center px-1.5">
+                      <img
+                        src="https://img.icons8.com/androidL/512/FFFFFF/amazon.png"
+                        alt="AWS Logo"
+                        class="h-4"
+                      />
+                    </div>
+
+                    <!-- Badge, pulled slightly closer -->
+                    <img
+                      src="https://img.shields.io/badge/AWS_Cloud_Practitioner-FF9900?style=for-the-badge&logoColor=white"
+                      alt="AWS Cloud Practitioner Badge"
+                      class="h-[28px] -ml-[7px]"
+                    />
+                  </a>
                 </div>
               </div>
             </div>
@@ -199,9 +233,9 @@
                     <h3 class="text-xl font-bold mb-2">
                       Why I Love Cybersecurity
                     </h3>
-                    <p class="text-gray-300 mb-3">An essay<br /><br /></p>
+                    <p class="text-gray-400 mb-3">An essay<br /><br /></p>
                     <span class="text-xs bg-blue-600 px-2 py-1 rounded"
-                      >Cybersecurity</span
+                      >Writing</span
                     >
                   </a>
                 </div>
@@ -217,10 +251,10 @@
                     class="block"
                   >
                     <h3 class="text-xl font-bold mb-2">OCaml Interpreter</h3>
-                    <p class="text-gray-300 mb-3">
+                    <p class="text-gray-400 mb-3">
                       Mock computer language interpreter
                     </p>
-                    <span class="text-xs bg-purple-600 px-2 py-1 rounded"
+                    <span class="text-xs bg-yellow-600 px-2 py-1 rounded"
                       >OCaml</span
                     >
                   </a>
@@ -231,62 +265,22 @@
                   class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
-                    href="https://github.com/DanielSon721/Auto-Messenger"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="block"
-                  >
-                    <h3 class="text-xl font-bold mb-2">Auto Messenger</h3>
-                    <p class="text-gray-300 mb-3">
-                      Messaging system for fraternity financial communications
-                    </p>
-                    <span class="text-xs bg-green-600 px-2 py-1 rounded"
-                      >Automation</span
-                    >
-                  </a>
-                </div>
-
-                <!-- Project 4 -->
-                <div
-                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
-                >
-                  <a
-                    href="https://github.com/DanielSon721/Hacking-Tools"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="block"
-                  >
-                    <h3 class="text-xl font-bold mb-2">Hacking Tools</h3>
-                    <p class="text-gray-300 mb-3">
-                      Collection of cybersecurity tools and scripts
-                    </p>
-                    <span class="text-xs bg-red-600 px-2 py-1 rounded"
-                      >Security</span
-                    >
-                  </a>
-                </div>
-
-                <!-- Project 5 -->
-                <div
-                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
-                >
-                  <a
                     href="https://github.com/DanielSon721/Unix-Shell"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="block"
                   >
                     <h3 class="text-xl font-bold mb-2">Unix Shell</h3>
-                    <p class="text-gray-300 mb-3">
+                    <p class="text-gray-400 mb-3">
                       Custom implementation of a Unix shell
                     </p>
-                    <span class="text-xs bg-yellow-600 px-2 py-1 rounded"
-                      >System</span
+                    <span class="text-xs bg-purple-600 px-2 py-1 rounded"
+                      >C</span
                     >
                   </a>
                 </div>
 
-                <!-- Project 6 -->
+                <!-- Project 4 -->
                 <div
                   class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
@@ -297,11 +291,51 @@
                     class="block"
                   >
                     <h3 class="text-xl font-bold mb-2">Texas Hold'em Poker</h3>
-                    <p class="text-gray-300 mb-3">
+                    <p class="text-gray-400 mb-3">
                       Play poker against A.I. opponents
                     </p>
+                    <span class="text-xs bg-red-600 px-2 py-1 rounded"
+                      >Python</span
+                    >
+                  </a>
+                </div>
+
+                <!-- Project 5 -->
+                <div
+                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                >
+                  <a
+                    href="https://github.com/DanielSon721/Auto-Messenger"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="block"
+                  >
+                    <h3 class="text-xl font-bold mb-2">Auto Messenger</h3>
+                    <p class="text-gray-400 mb-3">
+                      Messaging system for fraternity financial communications
+                    </p>
+                    <span class="text-xs bg-green-600 px-2 py-1 rounded"
+                      >Python</span
+                    >
+                  </a>
+                </div>
+
+                <!-- Project 6 -->
+                <div
+                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                >
+                  <a
+                    href="https://github.com/DanielSon721/Hacking-Tools"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="block"
+                  >
+                    <h3 class="text-xl font-bold mb-2">Hacking Tools</h3>
+                    <p class="text-gray-400 mb-3">
+                      Collection of cybersecurity tools and scripts
+                    </p>
                     <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
-                      >Game</span
+                      >Python</span
                     >
                   </a>
                 </div>
@@ -329,7 +363,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Object-Oriented Programming</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     OOP principles and design
                   </p>
                 </div>
@@ -337,7 +371,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Data Structures</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Fundamental data organization
                   </p>
                 </div>
@@ -345,7 +379,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Algorithms</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Problem-solving methods
                   </p>
                 </div>
@@ -353,7 +387,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Data Science</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Data analysis techniques
                   </p>
                 </div>
@@ -363,13 +397,13 @@
                   <h4 class="font-semibold">
                     Organization of Programming Languages
                   </h4>
-                  <p class="text-sm text-gray-300 mt-1">Syntax and semantics</p>
+                  <p class="text-sm text-gray-400 mt-1">Syntax and semantics</p>
                 </div>
                 <div
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Networks</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Computer networks and protocols
                   </p>
                 </div>
@@ -377,7 +411,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Cryptography</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Encryption and security protocols
                   </p>
                 </div>
@@ -385,7 +419,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Computer Systems</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Low-level system architecture
                   </p>
                 </div>
@@ -395,7 +429,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Calculus I</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Differential calculus
                   </p>
                 </div>
@@ -403,13 +437,13 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Calculus II</h4>
-                  <p class="text-sm text-gray-300 mt-1">Integral calculus</p>
+                  <p class="text-sm text-gray-400 mt-1">Integral calculus</p>
                 </div>
                 <div
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Calculus III</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Multivariable calculus
                   </p>
                 </div>
@@ -417,7 +451,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Advanced Calculus</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Mathematical analysis
                   </p>
                 </div>
@@ -425,7 +459,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Differential Equations</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Ordinary differential equations
                   </p>
                 </div>
@@ -433,7 +467,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Statistics</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Probability, distributions, statistical inference
                   </p>
                 </div>
@@ -441,7 +475,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Linear Algebra</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Vector spaces and matrices
                   </p>
                 </div>
@@ -449,7 +483,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Advanced Linear Algebra</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Advanced matrix theory
                   </p>
                 </div>
@@ -457,7 +491,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Discrete Math</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Logic, sets, relations, graphs
                   </p>
                 </div>
@@ -465,13 +499,13 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Academic Writing</h4>
-                  <p class="text-sm text-gray-300 mt-1">Rhetoric in writing</p>
+                  <p class="text-sm text-gray-400 mt-1">Rhetoric in writing</p>
                 </div>
                 <div
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Philosophy</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Fundamental philosophical concepts
                   </p>
                 </div>
@@ -479,7 +513,7 @@
                   class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Astronomy</h4>
-                  <p class="text-sm text-gray-300 mt-1">
+                  <p class="text-sm text-gray-400 mt-1">
                     Sun, moon, planets, stars, nebulae, galaxies
                   </p>
                 </div>
@@ -529,5 +563,6 @@
     </div>
 
     <script type="module" src="matrix.js"></script>
+    <script src="matrix.js"></script>
   </body>
 </html>
